--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
       }
     ]
   },
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "^20.3.0",
