--- a/client/package.json
+++ b/client/package.json
@@ -35,9 +35,13 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.1",
     "@primeuix/themes": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "express": "^5.1.0",
+    "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
