--- a/client/angular.json
+++ b/client/angular.json
@@ -54,7 +54,8 @@
               "sourceMap": false,
               "namedChunks": false,
               "aot": true,
-              "extractLicenses": true
+              "extractLicenses": true,
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "fileReplacements": [
