--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@angular/service-worker": "^20.3.0",
     "@angular/ssr": "^20.3.1",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
