feat(client): try update worker

--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "gym-tracker",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production && node update-worker-version.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:gym-tracker": "node dist/gym-tracker/server/server.mjs"
