feat(client): update sw path

--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/service-worker.js"
             ],
             "styles": [
               "src/styles.css"
