feat(client): update worker

--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration=production && node update-worker-version.js",
+    "build:prod": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:gym-tracker": "node dist/gym-tracker/server/server.mjs"
