--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -24,7 +24,6 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --chown=nginx:nginx --from=builder /app/dist/*/browser /usr/share/nginx/html
 
-EXPOSE 4200
+EXPOSE 4000
 
-ENTRYPOINT ["nginx", "-c", "/etc/nginx/nginx.conf"]
-CMD ["-g", "daemon off;"]
+CMD ["node", "dist/gym-tracker/server/server.mjs"]
