--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration=production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:gym-tracker": "node dist/gym-tracker/server/server.mjs"
+    "serve:ssr:gym-tracker": "node dist/gym-tracker/server/server.mjs",
+    "pretty-quick": "pretty-quick --staged",
+    "lint": "ng lint --fix",
+    "prepare": "husky install"
   },
   "prettier": {
     "printWidth": 100,
@@ -54,12 +55,20 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "angular-eslint": "20.3.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "8.40.0",
+    "husky": "^8.0.0"
   }
 }
