--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,7 @@
     "build:prod": "ng build --configuration=production",
     "serve:ssr:gym-tracker": "node dist/gym-tracker/server/server.mjs",
     "pretty-quick": "pretty-quick --staged",
-    "lint": "ng lint --fix",
-    "prepare": "husky install"
+    "lint": "ng lint --fix"
   },
   "prettier": {
     "printWidth": 100,
@@ -68,7 +67,6 @@
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
     "typescript": "~5.9.2",
-    "typescript-eslint": "8.40.0",
-    "husky": "^8.0.0"
+    "typescript-eslint": "8.40.0"
   }
 }
