--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -5,5 +5,6 @@
   "singleQuote": true,
   "semicolon": true,
   "quoteProps": "preserve",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "endOfLine": "auto"
 }
