--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "@angular/ssr": "^20.3.1",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
