feat(server): add color to sessions

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -18,3 +18,12 @@ services:
       ME_CONFIG_BASICAUTH_ENABLED: true
       ME_CONFIG_BASICAUTH_USERNAME: admin
       ME_CONFIG_BASICAUTH_PASSWORD: admin
+#   ollama:
+#     image: ollama/ollama
+#     volumes:
+#       - ollama:/root/.ollama
+#     ports:
+#       - 11434:11434
+
+# volumes:
+#   ollama:
